feat: Enhance application modularity with new components and refactored theme management

--- a/backend/notebooks/test1.ipynb
+++ b/backend/notebooks/test1.ipynb
@@ -3,7 +3,7 @@
     {
       "id": "512c638e-a984-4826-9ad6-12b64ba92c85",
       "type": "code",
-      "content": "",
+      "content": "# 导入必要的库\r\nimport pandas as pd\r\n\r\n# 加载CSV文件\r\nsensor_data_df = pd.read_csv('data/sensor_data.csv')",
       "output": {
         "output": "",
         "plot": "",
