feat: Introduce CellHeader component and refactor notebook cell management

--- a/backend/notebooks/CountryGDP.ipynb
+++ b/backend/notebooks/CountryGDP.ipynb
@@ -12,6 +12,17 @@
       }
     },
     {
+      "id": "a2120942-bcdc-40bc-b49b-2b122f8441fb",
+      "type": "code",
+      "content": "",
+      "output": {
+        "output": "",
+        "plot": "",
+        "plotly_html": "",
+        "status": "idle"
+      }
+    },
+    {
       "id": "44ebd379-4ef3-4b18-84dc-dc2b84109027",
       "type": "code",
       "content": "import pandas as pd\nimport matplotlib.pyplot as plt\n\n# 检查DataFrame是否存在且非空\nif 'country_gdp_df' in locals() and not country_gdp_df.empty:\n    # 复制一个新的DataFrame变量\n    df_copy = country_gdp_df.copy()\n    \n    # 检查是否存在Time列，如果存在则将其转化为时间索引\n    if 'Time' in df_copy.columns:\n        df_copy['Time'] = pd.to_datetime(df_copy['Time'])\n        df_copy.set_index('Time', inplace=True)\n    \n    # 计算数据集的特征数据\n    summary_stats = df_copy.describe()\n    \n    # 绘制多个子图\n    fig, axes = plt.subplots(nrows=2, ncols=1, figsize=(10, 8))\n    \n    # 绘制GDP的曲线图\n    df_copy['gdp'].plot(ax=axes[0], title='GDP Over Time', legend=True)\n    \n    # 绘制幸福指数的曲线图\n    df_copy['happiness_index'].plot(ax=axes[1], title='Happiness Index Over Time', legend=True)\n    \n    # 调整子图之间的间距\n    plt.tight_layout()\n    \n    # 显示图表\n    plt.show()\nelse:\n    print(\"DataFrame 'country_gdp_df' 不存在或为空\")",
