refactor: Restructure backend code execution and notebook management
This commit introduces significant changes to the backend's code execution and notebook management system:

- Replaced `data_explorer` and `execution_routes` with more modular `note_executor` and `dataframe_manager`
- Added session-based code execution with unique session IDs for notebooks
- Implemented new notebook and data management services
- Removed redundant route and service implementations
- Enhanced DataFrame and notebook environment handling

--- a/backend/notebooks/Example011.ipynb
+++ b/backend/notebooks/Example011.ipynb
@@ -1,4 +1,5 @@
 {
+  "session_id": "44c587f3-2aa7-40b9-b9b2-f8fe81c93d2c",
   "cells": [
     {
       "id": "f61218ab-ad79-482c-9615-3bb8720104fe",
