--- a/backend/notebooks/Example021.ipynb
+++ b/backend/notebooks/Example021.ipynb
@@ -1,4 +1,5 @@
 {
+  "session_id": "e6cd3bee-7ee8-45bf-a66a-396c162ae26b",
   "cells": [
     {
       "id": "9af352ce-3e65-4c14-ac11-c2e3fe6247a0",
