--- a/backend/notebooks/Example03.ipynb
+++ b/backend/notebooks/Example03.ipynb
@@ -1,4 +1,5 @@
 {
+  "session_id": "1418fcd7-ccd7-4dfb-93bf-b3ca3a2f7492",
   "cells": [
     {
       "id": "8efda7b4-0354-4846-bbcf-fac3d55d7690",
