--- a/backend/notebooks/PlotlyDemo1.ipynb
+++ b/backend/notebooks/PlotlyDemo1.ipynb
@@ -1,4 +1,5 @@
 {
+  "session_id": "d03d27f5-b860-4af5-94c6-407eced1d9fb",
   "cells": [
     {
       "id": "a22a7393-c194-455b-9223-02ef38593e8e",
