--- a/backend/notebooks/Sensor_Data1.ipynb
+++ b/backend/notebooks/Sensor_Data1.ipynb
@@ -1,4 +1,5 @@
 {
+  "session_id": "5815baa3-fc73-4c54-839d-20ddbc4e0de3",
   "cells": [
     {
       "id": "2d1c09ab-aeda-4c93-9252-cda59140690b",
