--- a/backend/notebooks/Sin_Function.ipynb
+++ b/backend/notebooks/Sin_Function.ipynb
@@ -1,4 +1,5 @@
 {
+  "session_id": "bcb259f4-8820-4230-9bf8-059f923278a8",
   "cells": [
     {
       "id": "5c619306-385a-471e-b6c8-de4482460c9c",
