--- a/backend/notebooks/test1.ipynb
+++ b/backend/notebooks/test1.ipynb
@@ -1,4 +1,5 @@
 {
+  "session_id": "37177278-6e94-4a8b-816c-ed2ed57abbd1",
   "cells": [
     {
       "id": "512c638e-a984-4826-9ad6-12b64ba92c85",
