--- a/backend/notebooks/test2.ipynb
+++ b/backend/notebooks/test2.ipynb
@@ -1,4 +1,5 @@
 {
+  "session_id": "748feec6-80f4-4511-9eeb-0aea48869241",
   "cells": [
     {
       "id": "05249f75-b833-4d37-8024-60eaa590d55a",
