--- a/backend/notebooks/数据分析1.ipynb
+++ b/backend/notebooks/数据分析1.ipynb
@@ -1,4 +1,5 @@
 {
+  "session_id": "415de67f-1ed6-443b-96d6-520800a505fc",
   "cells": [
     {
       "id": "5ddf5961-e2e0-482e-bb45-8cffaef15176",
