--- a/backend/notebooks/CountryGDP.ipynb
+++ b/backend/notebooks/CountryGDP.ipynb
@@ -1,4 +1,5 @@
 {
+  "session_id": "372d62e9-a8f2-4c32-9eee-ae97ea4070e5",
   "cells": [
     {
       "id": "b54e566a-695f-4f45-bb84-80c981d20986",
