feat: Enhance Notebook Loading, Tabs, and User Experience
- Introduced LoadingMask component for better visual feedback during notebook operations
- Optimized notebook loading and tab management to prevent unnecessary state changes
- Removed automatic notebook and tab creation on startup
- Added empty state handling in NotebookContainer for improved user guidance
- Refactored notebook store to support multiple notebook states and active notebook management
- Improved notebook modification tracking and event handling
- Enhanced tabs scrolling and styling for better usability

--- a/backend/notebooks/CountryGDP1.ipynb
+++ b/backend/notebooks/CountryGDP1.ipynb
@@ -4,7 +4,7 @@
     {
       "id": "b54e566a-695f-4f45-bb84-80c981d20986",
       "type": "code",
-      "content": "# 导入必要的库\nimport pandas as pd\n\n# 加载CSV文件\ncountry_gdp_df = pd.read_csv('data/country_gdp.csv')",
+      "content": "# 导入必要的库\nimport pandas as pd\n\n\n# 加载CSV文件\ncountry_gdp_df = pd.read_csv('data/country_gdp.csv')",
       "output": {
         "output": "",
         "plot": "",
