--- a/backend/notebooks/test3.ipynb
+++ b/backend/notebooks/test3.ipynb
@@ -4,7 +4,7 @@
     {
       "id": "d91b9cfa-4976-49a8-807d-e8b2c1279fed",
       "type": "code",
-      "content": "",
+      "content": "# 导入必要的库\r\nimport pandas as pd",
       "output": {
         "output": "",
         "plot": "",
